--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:20px"><a href=''>[Video]</a></span>
+							<span style="font-size:20px"><a href='https://www.youtube.com/watch?v=Hj5yI8VtlXk'>[Video]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -257,7 +257,7 @@
 	<hr>
 	<center><h1>Video</h1></center>
 	<p align="center">
-		<iframe width="660" height="395" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+		<iframe width="660" height="395" src="https://www.youtube.com/watch?v=Hj5yI8VtlXk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
 	</p>
 
 	<!-- <table align=center width=800px>
