--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	<hr>
 	<center><h1>Video</h1></center>
 	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/watch?v=Hj5yI8VtlXk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+		<iframe width="660" height="395" src="https://www.youtube.com/embed/Hj5yI8VtlXk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
 	</p>
 
 	<!-- <table align=center width=800px>
